--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,13 +1,21 @@
 spring.application.name=demo
 server.port=9090
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
-spring.datasource.username=root
-spring.datasource.password=hoang2005
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
+# spring.datasource.username=root
+# spring.datasource.password=hoang2005
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
 
 #config spring sercurity
-spring.security.user.name=hoang2005
-spring.security.user.password=hoang2005
+# spring.security.user.name=hoang2005
+# spring.security.user.password=hoang2005
+
+#config view engine
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+# spring.main.allow-bean-definition-overriding=true
+
+# logging.file.name=app.log
+# logging.level.org.springframework.web=DEBUG
