--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.33</version>			<!-- Hoặc phiên bản mới nhất -->
+			<version>8.0.33</version>
 		</dependency>
 
 		<!-- Thư viện Tomcat cho ứng dụng Spring Boot, được cung cấp từ môi trường bên ngoài -->
